--- a/main.html
+++ b/main.html
@@ -5,6 +5,9 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<div class='main'>
+		<h1 id='heading' class='heading'>This is a Heading</h1>
+	</div>
 
 <body>
 	<!-- the entire body must be written by student -->
